fix: update crisis-related APIs
